[package]
name = "cargo-tree"
version = "0.27.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A Cargo subcommand that visualizes a crate's dependency graph in a tree-like format"
repository = "https://github.com/sfackler/cargo-tree"
readme = "README.md"

[dependencies]
cargo = "0.39"
env_logger = "0.7"
failure = "0.1"
petgraph = "0.4"
structopt = "0.3"
