[package]
name = "cargo-tree"
version = "0.29.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand that visualizes a crate's dependency graph in a tree-like format"
repository = "https://github.com/sfackler/cargo-tree"
readme = "README.md"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.9"
petgraph = "0.5"
semver = "0.9"
serde_json = "1.0"
structopt = "0.3"

# Reduce compile time by setting no optimization for build scripts,
# proc macros, and their dependencies
[profile.release.build-override]
opt-level = 0
